--- a/css/main.css
+++ b/css/main.css
@@ -96,9 +96,8 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-#form{
-   text-align: center;
-   padding-top:50px;
+body{
+    text-align: center;
 }
 
 
